[metadata]
name = album-server
version = 0.1.0
description = album plugin for controlling album via a server and REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/album-app/album-server
author = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer_email = album@kyleharrington.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = virtual, environments, imaging, data analysis
project_urls =
    Source=https://gitlab.com/album-app/album-server
    Tracker=https://gitlab.com/album-app/album-server/issues

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    album>=0.7.1
    flask>=2.0.1
    flask-unittest>=0.1.2
python_requires = >=3.7

[options.package_data]
* = *.txt, *.rst, *.sh, *.sql, *.json

[options.packages.find]
where = src

[options.entry_points]
console_parsers_album =
    server=album.server.argument_parsing:create_server_parser
